[project]
name = "langgraph-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "luuducquy0510",email = "luuducquy05102003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.3,<4.0.0"
dependencies = [
    "langgraph (>=0.4.3,<0.5.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-google-genai (>=2.1.4,<3.0.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "duckduckgo-search (>=8.0.1,<9.0.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
